// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`question redesign > pins every question the model sees at the summary (a diff here re-keys the cassette) 1`] = `
{
  "addressedToSystem": {
    "criteria": {
      "false": "Talking to someone else in the room, to a television, or to themselves, even when what they say is about the call",
      "true": "Anything said in reply to the phone system, including a short answer or correction to the question it just asked, such as a name, a day, a number, a yes or no, or a bare correction",
    },
    "instructions": "Read asr.text. Is the caller speaking to the phone system, as opposed to someone else in the room, a television, or themselves?",
    "type": "noul",
  },
  "changeSlot": {
    "criteria": {
      "date": "They name the day or date as the thing to change, without saying which day instead, as in the day, or the date is wrong (not a different time on the same day)",
      "dob": "They name their date of birth or birthday as the thing to change, without saying the new date, as in the birthday, or my date of birth is wrong",
      "name": "They name their own name as the thing to change, without saying a new name, as in the name, or you got my name wrong",
      "none": "They say a new value rather than naming which detail is wrong, such as a weekday, a doctor name, or a string of digits; or they only answer yes or no; or they name nothing",
      "provider": "They name the doctor or provider as the thing to change, without saying who instead, as in the doctor, or not that doctor",
    },
    "instructions": "Read asr.text and node.promptJustPlayed. The caller was read a summary of their appointment and asked to confirm it, or asked what to change. Which detail do they name as wrong or ask to change?",
    "type": "choice",
  },
  "confirmsNo": {
    "criteria": {
      "false": "The caller agrees, answers something else, or says nothing about the question",
      "true": "The caller says no, says something is wrong, or gives a value that replaces or contradicts a detail the system just read back, including a bare correction such as "not Chen, Cheng" or "Thursday, not Tuesday", whether or not the system itself named the value they reject",
    },
    "instructions": "Read asr.text and node.promptJustPlayed. Does the caller answer no to the confirmation question?",
    "type": "noul",
  },
  "confirmsYes": {
    "instructions": "Read asr.text and node.promptJustPlayed. Does the caller answer yes to the confirmation question?",
    "type": "noul",
  },
  "confusedByPrompt": {
    "instructions": "Read asr.text and node.promptJustPlayed. Does the caller sound confused by what the system just asked?",
    "type": "noul",
  },
  "dateDay": {
    "criteria": {
      "1": null,
      "10": null,
      "11": null,
      "12": null,
      "13": null,
      "14": null,
      "15": null,
      "16": null,
      "17": null,
      "18": null,
      "19": null,
      "2": null,
      "20": null,
      "21": null,
      "22": null,
      "23": null,
      "24": null,
      "25": null,
      "26": null,
      "27": null,
      "28": null,
      "29": null,
      "3": null,
      "30": null,
      "31": null,
      "4": null,
      "5": null,
      "6": null,
      "7": null,
      "8": null,
      "9": null,
      "none": null,
    },
    "instructions": "Read asr.text. Which day of the month does the caller name, if any? The caller's date of birth or birthday, or a date answering a question about it, is not an appointment date. If the only month and day in asr.text belong to the caller's birthday, answer none. When they correct a day of the month, the word not marks the one they are rejecting; choose the other one, as in "not the 5th, the 6th" or "the 20th, not the 12th". A hedge such as "I'm not sure" or "either" is not a correction; name the day of the month they mention.",
    "type": "choice",
  },
  "dateMode": {
    "criteria": {
      "absolute": null,
      "none": "No day for the appointment. The caller's date of birth or birthday, or a date answering a question about it, is not one",
      "relative_day": null,
      "weekday": null,
      "window": null,
    },
    "instructions": "Read asr.text. How does the caller refer to a day for the appointment? "absolute" names a month or a month and day. "relative_day" is today, tomorrow, or the day after tomorrow. "weekday" names a day of the week. "window" is a span like this week or next month. "none" if no day is mentioned. The caller's date of birth or birthday, or a date answering a question about it, is not an appointment date. One utterance can carry both: a birthday and, separately, the day they want to come in. The appointment day is the one not introduced by born or birthday, so a weekday or a relative day said alongside a birthday is still the appointment day and still names the mode.",
    "type": "choice",
  },
  "dateMonth": {
    "criteria": {
      "april": null,
      "august": null,
      "december": null,
      "february": null,
      "january": null,
      "july": null,
      "june": null,
      "march": null,
      "may": null,
      "none": null,
      "november": null,
      "october": null,
      "september": null,
    },
    "instructions": "Read asr.text. Which month does the caller name, if any? The caller's date of birth or birthday, or a date answering a question about it, is not an appointment date. If the only month and day in asr.text belong to the caller's birthday, answer none. When they correct a month, the word not marks the month they are rejecting; choose the other one, as in "not March, April" or "October, not September". A hedge such as "I'm not sure" or "either" is not a correction; name the month they mention.",
    "type": "choice",
  },
  "dateRelativeDay": {
    "criteria": {
      "day_after_tomorrow": null,
      "none": null,
      "today": null,
      "tomorrow": null,
    },
    "instructions": "Read asr.text. Does the caller say today, tomorrow, or the day after tomorrow? When they correct a relative day, the word not marks the one they are rejecting; choose the other one, as in "not today, the day after tomorrow". A hedge such as "I'm not sure" or "either" is not a correction; name the relative day they mention.",
    "type": "choice",
  },
  "dateWeekday": {
    "criteria": {
      "friday": null,
      "monday": null,
      "none": null,
      "saturday": null,
      "sunday": null,
      "thursday": null,
      "tuesday": null,
      "wednesday": null,
    },
    "instructions": "Read asr.text. Which day of the week does the caller name, if any? When they correct a day, the word not marks the day they are rejecting; choose the other one, as in "not Monday, Friday" or "Saturday, not Sunday". A hedge such as "I'm not sure" or "either" is not a correction; name the day they mention.",
    "type": "choice",
  },
  "dateWeekdayQualifier": {
    "criteria": {
      "next": null,
      "none": null,
      "this": null,
    },
    "instructions": "Read asr.text. If the caller names a day of the week, do they say "this" or "next" before it? When they correct this qualifier, the word not marks the one they are rejecting; choose the other one, as in "not this Thursday, next Thursday". A hedge such as "I'm not sure" or "either" is not a correction; name the qualifier they mention.",
    "type": "choice",
  },
  "dateWindow": {
    "criteria": {
      "next_month": null,
      "next_week": null,
      "none": null,
      "this_month": null,
      "this_week": null,
    },
    "instructions": "Read asr.text. Does the caller name a span of days such as this week, next week, this month, or next month? When they correct the span, the word not marks the one they are rejecting; choose the other one, as in "not next week, this week". A hedge such as "I'm not sure" or "either" is not a correction; name the span they mention.",
    "type": "choice",
  },
  "dobDay": {
    "criteria": {
      "1": null,
      "10": null,
      "11": null,
      "12": null,
      "13": null,
      "14": null,
      "15": null,
      "16": null,
      "17": null,
      "18": null,
      "19": null,
      "2": null,
      "20": null,
      "21": null,
      "22": null,
      "23": null,
      "24": null,
      "25": null,
      "26": null,
      "27": null,
      "28": null,
      "29": null,
      "3": null,
      "30": null,
      "31": null,
      "4": null,
      "5": null,
      "6": null,
      "7": null,
      "8": null,
      "9": null,
      "none": null,
    },
    "instructions": "Read asr.text. Which day of the month is the caller's date of birth, if they say one? This is the birth date, not an appointment date.",
    "type": "choice",
  },
  "dobGiven": {
    "criteria": {
      "false": "No birth date. An appointment date, a date they want to be seen on, or someone else's birth date is not the caller's date of birth",
      "true": "The caller gives their own birth date or part of it: a full date, a month and day, or a year on its own in answer to a question about their birth year",
    },
    "instructions": "Read asr.text. Does the caller state their date of birth or birthday, in whole or in part (a month and day, or a year alone when asked for it)?",
    "type": "noul",
  },
  "dobMonth": {
    "criteria": {
      "april": null,
      "august": null,
      "december": null,
      "february": null,
      "january": null,
      "july": null,
      "june": null,
      "march": null,
      "may": null,
      "none": null,
      "november": null,
      "october": null,
      "september": null,
    },
    "instructions": "Read asr.text. Which month is the caller's date of birth in, if they say one? This is the birth date, not an appointment date. A month may be said as a number rather than a name; answer with the month that number means, as in seven two sixty five, which is July 2nd, 1965.",
    "type": "choice",
  },
  "dobYear": {
    "criteria": {
      "none": "No span of asr.text is a year of the caller's birth",
    },
    "instructions": "Read asr.text. Which of these spans is the year of the caller's birth, if they say one, as in "nineteen seventy four", "seventy four", or "two thousand one"? Choose none when no year is said.",
    "type": "choice",
  },
  "frustration": {
    "instructions": "Read asr.text. How frustrated does the caller sound?",
    "levels": [
      {
        "description": "Calm or neutral wording, including a plain request made once",
        "label": "none",
      },
      {
        "description": "A sigh, an ugh, a come on or a seriously attached to an otherwise plain request, or a complaint about waiting, with no sign the caller is repeating themselves",
        "label": "mild",
      },
      {
        "description": "The caller says they already said or told us something, counts the attempts as in for the third time, asks are you kidding me, calls it ridiculous, swears, insults the system, or threatens to hang up or complain",
        "label": "high",
      },
    ],
    "type": "score",
  },
  "intelligible": {
    "criteria": {
      "false": "Garbled fragments, transcribed noise, or nothing but a filler sound such as um or uh",
      "true": "Any real utterance, including a single word, a yes or no, a name, a number, or a string of digits",
    },
    "instructions": "Read asr.text. Is the text words the caller actually said, rather than garbled fragments or background noise?",
    "type": "noul",
  },
  "intent": {
    "criteria": {
      "agent": "Asks to speak with a person, representative, or operator",
      "billing": "Asks about a bill, charge, payment, or insurance coverage",
      "cancel": "Wants to cancel an existing appointment",
      "capabilities": "Asks what the system can do, what it is, what the options are, or how to use it, as in what can you do, what are my options, or what is this",
      "confirm_appointment": "Wants to check or confirm the details of an existing appointment",
      "none": "No request is expressed; the caller is only answering a question or saying something incidental",
      "other": "A request the clinic line does not handle",
      "repeat_prompt": "Asks the system to repeat what it just said",
      "reschedule": "Wants to move an existing appointment to a different day",
      "schedule_new": "Wants to book a new appointment that does not exist yet",
    },
    "instructions": "Read asr.text. What is the caller asking the clinic phone line to do? If they are only answering a slot or confirmation question and not asking for anything new, choose none.",
    "type": "choice",
  },
  "intentChange": {
    "criteria": {
      "adding": "Asks for an additional task to be handled as well, while keeping the current one, for example with also, as well, and another thing, or after this",
      "answering": "Answers or reacts to the question that was just asked, restates the current task, or says something incidental; anything that is not a request for a different task",
      "replacing": "Abandons the current task in favour of a different one, for example with never mind, forget that, instead, or actually I just want",
    },
    "instructions": "Read asr.text. The caller is in the middle of the task described by activeFormLabel and was just asked node.promptJustPlayed. Which best describes this utterance?",
    "type": "choice",
  },
  "intentTentative": {
    "criteria": {
      "false": "The request is stated plainly, even if the caller hedges about a detail such as a date, a provider name, or a number",
      "true": "The hedge is about what the caller wants done, as in maybe cancel it or I guess I need to cancel",
    },
    "instructions": "Read asr.text. Does the caller express their request tentatively, with words such as maybe, I guess, I think, possibly, or might, rather than stating it plainly?",
    "type": "noul",
  },
  "languageSwitch": {
    "criteria": {
      "es": "Spanish",
      "fr": "French",
      "none": "English",
    },
    "instructions": "Read asr.text. Which language other than English does the caller ask for or speak, if any?",
    "type": "choice",
  },
  "nameGiven": {
    "criteria": {
      "false": "No personal name, or a name that is not the caller's, such as a doctor's name, or a correction to the doctor's name",
      "true": "The caller gives their own name, as in my name is Anna Petrov, this is Sam, or Priya Raghunathan, including a correction to their own name just read back to them, as in no, it's Sam Lee",
    },
    "instructions": "Read asr.text. Does the caller state their own name, first name alone or first and last?",
    "type": "noul",
  },
  "nameSpan": {
    "criteria": {
      "none": "No span of asr.text is the caller's name, as when the caller only agrees, refuses, or names something other than themselves",
    },
    "instructions": "Read asr.text. Which of these spans is the caller's own full name as they say it, first and last when both are given? Do not include words such as my name is or this is, and do not choose a provider's name or anyone else's. When \`slots.name\` is already set and the caller gives a different name for themselves, as in no, it's Sam Lee, choose that span; correcting the doctor's name, as in not Dr. Alder, Dr. Ames, is not the caller's name. A single word can be the whole name, as in Prince. Choose none if no span is the caller's name.",
    "type": "choice",
  },
  "provider": {
    "criteria": {
      "alvarez": "Dr. Alvarez, also said as just Alvarez",
      "chen": "Dr. Chen, also said as just Chen",
      "cheng": "Dr. Cheng, also said as just Cheng",
      "kim": "Dr. Kim, also said as just Kim",
      "nguyen": "Dr. Nguyen, also said as just Nguyen",
      "none": "No provider is named",
      "okafor": "Dr. Okafor, also said as just Okafor",
      "patel": "Dr. Patel, also said as just Patel",
      "rossi": "Dr. Rossi, also said as just Rossi",
    },
    "instructions": "Read asr.text. Which provider, if any, does the caller name? When they correct a name, the word not marks the name they are rejecting; choose the other one, as in "not Chen, Cheng" or "Okafor, not Nguyen". A hedge such as "I'm not sure" or "either" is not a correction; name the provider they mention.",
    "type": "choice",
  },
  "providerNameStatus": {
    "criteria": {
      "has_name": "Says yes, that they have or know the provider's name, without saying the name",
      "neither": "Names a provider, or says nothing about whether they know the name",
      "no_name": "Says no, or that they don't know, don't have, can't remember, or were never told the provider's name, or asks who the doctors are",
    },
    "instructions": "Read asr.text and node.promptJustPlayed. The caller was asked whether they have the provider's name. Do they say whether they know it, without naming a provider?",
    "type": "choice",
  },
  "providerUnsure": {
    "criteria": {
      "false": "The caller names a provider plainly, or names none. A caller correcting themselves, as in Dr. Chen, not Dr. Cheng, is sure, and so is a caller who hedges only about what they want done, as in maybe cancel it with Dr. Chen",
      "true": "The caller hedges about the provider, as in it might be Dr. Kim or Dr. Rossi I think, or offers two names for one provider, as in Dr. Chen or Cheng, I am not sure",
    },
    "instructions": "Read asr.text. Is the caller unsure which provider they mean, or unsure of that provider's name?",
    "type": "noul",
  },
  "rephrasingLastTurn": {
    "instructions": "Read asr.text and history. Is the caller repeating or rewording a request because the previous turn's outcome in history shows the system did not act on it?",
    "type": "noul",
  },
  "spokeAMenuNumber": {
    "instructions": "Read asr.text. Does the caller say a single number as if choosing a menu option, such as "one" or "press two"?",
    "type": "noul",
  },
  "timeOfDay": {
    "criteria": {
      "afternoon": "Asks for the afternoon, late in the day, after work, end of day, or a time from two onward",
      "midday": "Asks for midday, noon, lunchtime, late morning, early afternoon, or a time between eleven and two",
      "morning": "Asks for the morning, first thing, early in the day, or a time before eleven",
      "none": "Says nothing about the part of the day",
    },
    "instructions": "Read asr.text. Does the caller say what part of the day they want the appointment in? Read only what they say about the time of day; a weekday or a date on its own says nothing about it, a greeting such as good morning or good afternoon says nothing about it, and earlier or later on their own, including later in the day, are not a part of the day; early next week or early this month is about the day, not the time of day.",
    "type": "choice",
  },
  "timePreference": {
    "criteria": {
      "different": "Says the offered time itself does not work, without saying which way, as in not that time, a different time, or that time is no good; the time has to be what they object to",
      "earlier": "Asks for an earlier time, or anything before the offered time, as in earlier, sooner in the day, or before that",
      "later": "Asks for a later time, or anything after the offered time, as in later, after that, or later in the day",
      "none": "Accepts, says a bare no or declines without mentioning the time, names a day or a part of the day such as the morning or the afternoon, or says nothing about the time",
    },
    "instructions": "Read asr.text and node.promptJustPlayed. The caller was offered an appointment at a specific time. Do they ask for a different time on the same day, and in which direction? A bare no, or a refusal that does not mention the time, answers the yes/no question and is none.",
    "type": "choice",
  },
  "triedSelfService": {
    "instructions": "Read asr.text. Does the caller say they already tried the website, the app, or an earlier call?",
    "type": "noul",
  },
  "urgency": {
    "instructions": "Read asr.text. How urgent is the caller's need?",
    "levels": [
      {
        "description": "No time pressure mentioned",
        "label": "low",
      },
      {
        "description": "Wants it handled soon",
        "label": "normal",
      },
      {
        "description": "Says it is urgent, an emergency, or must happen today",
        "label": "high",
      },
    ],
    "type": "score",
  },
  "utteranceComplete": {
    "instructions": "Read asr.text. Has the caller finished their thought, rather than trailing off or being cut short?",
    "type": "noul",
  },
  "wantsHuman": {
    "instructions": "Read asr.text. Does the caller explicitly ask to talk to a person, an agent, a representative, or an operator?",
    "type": "noul",
  },
}
`;

exports[`question redesign > pins every question the model sees inside a form (a diff here re-keys the cassette) 1`] = `
{
  "addressedToSystem": {
    "criteria": {
      "false": "Talking to someone else in the room, to a television, or to themselves, even when what they say is about the call",
      "true": "Anything said in reply to the phone system, including a short answer or correction to the question it just asked, such as a name, a day, a number, a yes or no, or a bare correction",
    },
    "instructions": "Read asr.text. Is the caller speaking to the phone system, as opposed to someone else in the room, a television, or themselves?",
    "type": "noul",
  },
  "confusedByPrompt": {
    "instructions": "Read asr.text and node.promptJustPlayed. Does the caller sound confused by what the system just asked?",
    "type": "noul",
  },
  "dateDay": {
    "criteria": {
      "1": null,
      "10": null,
      "11": null,
      "12": null,
      "13": null,
      "14": null,
      "15": null,
      "16": null,
      "17": null,
      "18": null,
      "19": null,
      "2": null,
      "20": null,
      "21": null,
      "22": null,
      "23": null,
      "24": null,
      "25": null,
      "26": null,
      "27": null,
      "28": null,
      "29": null,
      "3": null,
      "30": null,
      "31": null,
      "4": null,
      "5": null,
      "6": null,
      "7": null,
      "8": null,
      "9": null,
      "none": null,
    },
    "instructions": "Read asr.text. Which day of the month does the caller name, if any? The caller's date of birth or birthday, or a date answering a question about it, is not an appointment date. If the only month and day in asr.text belong to the caller's birthday, answer none. When they correct a day of the month, the word not marks the one they are rejecting; choose the other one, as in "not the 5th, the 6th" or "the 20th, not the 12th". A hedge such as "I'm not sure" or "either" is not a correction; name the day of the month they mention.",
    "type": "choice",
  },
  "dateMode": {
    "criteria": {
      "absolute": null,
      "none": "No day for the appointment. The caller's date of birth or birthday, or a date answering a question about it, is not one",
      "relative_day": null,
      "weekday": null,
      "window": null,
    },
    "instructions": "Read asr.text. How does the caller refer to a day for the appointment? "absolute" names a month or a month and day. "relative_day" is today, tomorrow, or the day after tomorrow. "weekday" names a day of the week. "window" is a span like this week or next month. "none" if no day is mentioned. The caller's date of birth or birthday, or a date answering a question about it, is not an appointment date. One utterance can carry both: a birthday and, separately, the day they want to come in. The appointment day is the one not introduced by born or birthday, so a weekday or a relative day said alongside a birthday is still the appointment day and still names the mode.",
    "type": "choice",
  },
  "dateMonth": {
    "criteria": {
      "april": null,
      "august": null,
      "december": null,
      "february": null,
      "january": null,
      "july": null,
      "june": null,
      "march": null,
      "may": null,
      "none": null,
      "november": null,
      "october": null,
      "september": null,
    },
    "instructions": "Read asr.text. Which month does the caller name, if any? The caller's date of birth or birthday, or a date answering a question about it, is not an appointment date. If the only month and day in asr.text belong to the caller's birthday, answer none. When they correct a month, the word not marks the month they are rejecting; choose the other one, as in "not March, April" or "October, not September". A hedge such as "I'm not sure" or "either" is not a correction; name the month they mention.",
    "type": "choice",
  },
  "dateRelativeDay": {
    "criteria": {
      "day_after_tomorrow": null,
      "none": null,
      "today": null,
      "tomorrow": null,
    },
    "instructions": "Read asr.text. Does the caller say today, tomorrow, or the day after tomorrow? When they correct a relative day, the word not marks the one they are rejecting; choose the other one, as in "not today, the day after tomorrow". A hedge such as "I'm not sure" or "either" is not a correction; name the relative day they mention.",
    "type": "choice",
  },
  "dateWeekday": {
    "criteria": {
      "friday": null,
      "monday": null,
      "none": null,
      "saturday": null,
      "sunday": null,
      "thursday": null,
      "tuesday": null,
      "wednesday": null,
    },
    "instructions": "Read asr.text. Which day of the week does the caller name, if any? When they correct a day, the word not marks the day they are rejecting; choose the other one, as in "not Monday, Friday" or "Saturday, not Sunday". A hedge such as "I'm not sure" or "either" is not a correction; name the day they mention.",
    "type": "choice",
  },
  "dateWeekdayQualifier": {
    "criteria": {
      "next": null,
      "none": null,
      "this": null,
    },
    "instructions": "Read asr.text. If the caller names a day of the week, do they say "this" or "next" before it? When they correct this qualifier, the word not marks the one they are rejecting; choose the other one, as in "not this Thursday, next Thursday". A hedge such as "I'm not sure" or "either" is not a correction; name the qualifier they mention.",
    "type": "choice",
  },
  "dateWindow": {
    "criteria": {
      "next_month": null,
      "next_week": null,
      "none": null,
      "this_month": null,
      "this_week": null,
    },
    "instructions": "Read asr.text. Does the caller name a span of days such as this week, next week, this month, or next month? When they correct the span, the word not marks the one they are rejecting; choose the other one, as in "not next week, this week". A hedge such as "I'm not sure" or "either" is not a correction; name the span they mention.",
    "type": "choice",
  },
  "dobDay": {
    "criteria": {
      "1": null,
      "10": null,
      "11": null,
      "12": null,
      "13": null,
      "14": null,
      "15": null,
      "16": null,
      "17": null,
      "18": null,
      "19": null,
      "2": null,
      "20": null,
      "21": null,
      "22": null,
      "23": null,
      "24": null,
      "25": null,
      "26": null,
      "27": null,
      "28": null,
      "29": null,
      "3": null,
      "30": null,
      "31": null,
      "4": null,
      "5": null,
      "6": null,
      "7": null,
      "8": null,
      "9": null,
      "none": null,
    },
    "instructions": "Read asr.text. Which day of the month is the caller's date of birth, if they say one? This is the birth date, not an appointment date.",
    "type": "choice",
  },
  "dobGiven": {
    "criteria": {
      "false": "No birth date. An appointment date, a date they want to be seen on, or someone else's birth date is not the caller's date of birth",
      "true": "The caller gives their own birth date or part of it: a full date, a month and day, or a year on its own in answer to a question about their birth year",
    },
    "instructions": "Read asr.text. Does the caller state their date of birth or birthday, in whole or in part (a month and day, or a year alone when asked for it)?",
    "type": "noul",
  },
  "dobMonth": {
    "criteria": {
      "april": null,
      "august": null,
      "december": null,
      "february": null,
      "january": null,
      "july": null,
      "june": null,
      "march": null,
      "may": null,
      "none": null,
      "november": null,
      "october": null,
      "september": null,
    },
    "instructions": "Read asr.text. Which month is the caller's date of birth in, if they say one? This is the birth date, not an appointment date. A month may be said as a number rather than a name; answer with the month that number means, as in seven two sixty five, which is July 2nd, 1965.",
    "type": "choice",
  },
  "dobYear": {
    "criteria": {
      "none": "No span of asr.text is a year of the caller's birth",
    },
    "instructions": "Read asr.text. Which of these spans is the year of the caller's birth, if they say one, as in "nineteen seventy four", "seventy four", or "two thousand one"? Choose none when no year is said.",
    "type": "choice",
  },
  "frustration": {
    "instructions": "Read asr.text. How frustrated does the caller sound?",
    "levels": [
      {
        "description": "Calm or neutral wording, including a plain request made once",
        "label": "none",
      },
      {
        "description": "A sigh, an ugh, a come on or a seriously attached to an otherwise plain request, or a complaint about waiting, with no sign the caller is repeating themselves",
        "label": "mild",
      },
      {
        "description": "The caller says they already said or told us something, counts the attempts as in for the third time, asks are you kidding me, calls it ridiculous, swears, insults the system, or threatens to hang up or complain",
        "label": "high",
      },
    ],
    "type": "score",
  },
  "intelligible": {
    "criteria": {
      "false": "Garbled fragments, transcribed noise, or nothing but a filler sound such as um or uh",
      "true": "Any real utterance, including a single word, a yes or no, a name, a number, or a string of digits",
    },
    "instructions": "Read asr.text. Is the text words the caller actually said, rather than garbled fragments or background noise?",
    "type": "noul",
  },
  "intent": {
    "criteria": {
      "agent": "Asks to speak with a person, representative, or operator",
      "billing": "Asks about a bill, charge, payment, or insurance coverage",
      "cancel": "Wants to cancel an existing appointment",
      "capabilities": "Asks what the system can do, what it is, what the options are, or how to use it, as in what can you do, what are my options, or what is this",
      "confirm_appointment": "Wants to check or confirm the details of an existing appointment",
      "none": "No request is expressed; the caller is only answering a question or saying something incidental",
      "other": "A request the clinic line does not handle",
      "repeat_prompt": "Asks the system to repeat what it just said",
      "reschedule": "Wants to move an existing appointment to a different day",
      "schedule_new": "Wants to book a new appointment that does not exist yet",
    },
    "instructions": "Read asr.text. What is the caller asking the clinic phone line to do? If they are only answering a slot or confirmation question and not asking for anything new, choose none.",
    "type": "choice",
  },
  "intentChange": {
    "criteria": {
      "adding": "Asks for an additional task to be handled as well, while keeping the current one, for example with also, as well, and another thing, or after this",
      "answering": "Answers or reacts to the question that was just asked, restates the current task, or says something incidental; anything that is not a request for a different task",
      "replacing": "Abandons the current task in favour of a different one, for example with never mind, forget that, instead, or actually I just want",
    },
    "instructions": "Read asr.text. The caller is in the middle of the task described by activeFormLabel and was just asked node.promptJustPlayed. Which best describes this utterance?",
    "type": "choice",
  },
  "intentTentative": {
    "criteria": {
      "false": "The request is stated plainly, even if the caller hedges about a detail such as a date, a provider name, or a number",
      "true": "The hedge is about what the caller wants done, as in maybe cancel it or I guess I need to cancel",
    },
    "instructions": "Read asr.text. Does the caller express their request tentatively, with words such as maybe, I guess, I think, possibly, or might, rather than stating it plainly?",
    "type": "noul",
  },
  "languageSwitch": {
    "criteria": {
      "es": "Spanish",
      "fr": "French",
      "none": "English",
    },
    "instructions": "Read asr.text. Which language other than English does the caller ask for or speak, if any?",
    "type": "choice",
  },
  "nameGiven": {
    "criteria": {
      "false": "No personal name, or a name that is not the caller's, such as a doctor's name, or a correction to the doctor's name",
      "true": "The caller gives their own name, as in my name is Anna Petrov, this is Sam, or Priya Raghunathan, including a correction to their own name just read back to them, as in no, it's Sam Lee",
    },
    "instructions": "Read asr.text. Does the caller state their own name, first name alone or first and last?",
    "type": "noul",
  },
  "nameSpan": {
    "criteria": {
      "none": "No span of asr.text is the caller's name, as when the caller only agrees, refuses, or names something other than themselves",
    },
    "instructions": "Read asr.text. Which of these spans is the caller's own full name as they say it, first and last when both are given? Do not include words such as my name is or this is, and do not choose a provider's name or anyone else's. When \`slots.name\` is already set and the caller gives a different name for themselves, as in no, it's Sam Lee, choose that span; correcting the doctor's name, as in not Dr. Alder, Dr. Ames, is not the caller's name. A single word can be the whole name, as in Prince. Choose none if no span is the caller's name.",
    "type": "choice",
  },
  "provider": {
    "criteria": {
      "alvarez": "Dr. Alvarez, also said as just Alvarez",
      "chen": "Dr. Chen, also said as just Chen",
      "cheng": "Dr. Cheng, also said as just Cheng",
      "kim": "Dr. Kim, also said as just Kim",
      "nguyen": "Dr. Nguyen, also said as just Nguyen",
      "none": "No provider is named",
      "okafor": "Dr. Okafor, also said as just Okafor",
      "patel": "Dr. Patel, also said as just Patel",
      "rossi": "Dr. Rossi, also said as just Rossi",
    },
    "instructions": "Read asr.text. Which provider, if any, does the caller name? When they correct a name, the word not marks the name they are rejecting; choose the other one, as in "not Chen, Cheng" or "Okafor, not Nguyen". A hedge such as "I'm not sure" or "either" is not a correction; name the provider they mention.",
    "type": "choice",
  },
  "providerNameStatus": {
    "criteria": {
      "has_name": "Says yes, that they have or know the provider's name, without saying the name",
      "neither": "Names a provider, or says nothing about whether they know the name",
      "no_name": "Says no, or that they don't know, don't have, can't remember, or were never told the provider's name, or asks who the doctors are",
    },
    "instructions": "Read asr.text and node.promptJustPlayed. The caller was asked whether they have the provider's name. Do they say whether they know it, without naming a provider?",
    "type": "choice",
  },
  "providerUnsure": {
    "criteria": {
      "false": "The caller names a provider plainly, or names none. A caller correcting themselves, as in Dr. Chen, not Dr. Cheng, is sure, and so is a caller who hedges only about what they want done, as in maybe cancel it with Dr. Chen",
      "true": "The caller hedges about the provider, as in it might be Dr. Kim or Dr. Rossi I think, or offers two names for one provider, as in Dr. Chen or Cheng, I am not sure",
    },
    "instructions": "Read asr.text. Is the caller unsure which provider they mean, or unsure of that provider's name?",
    "type": "noul",
  },
  "rephrasingLastTurn": {
    "instructions": "Read asr.text and history. Is the caller repeating or rewording a request because the previous turn's outcome in history shows the system did not act on it?",
    "type": "noul",
  },
  "spokeAMenuNumber": {
    "instructions": "Read asr.text. Does the caller say a single number as if choosing a menu option, such as "one" or "press two"?",
    "type": "noul",
  },
  "timeOfDay": {
    "criteria": {
      "afternoon": "Asks for the afternoon, late in the day, after work, end of day, or a time from two onward",
      "midday": "Asks for midday, noon, lunchtime, late morning, early afternoon, or a time between eleven and two",
      "morning": "Asks for the morning, first thing, early in the day, or a time before eleven",
      "none": "Says nothing about the part of the day",
    },
    "instructions": "Read asr.text. Does the caller say what part of the day they want the appointment in? Read only what they say about the time of day; a weekday or a date on its own says nothing about it, a greeting such as good morning or good afternoon says nothing about it, and earlier or later on their own, including later in the day, are not a part of the day; early next week or early this month is about the day, not the time of day.",
    "type": "choice",
  },
  "triedSelfService": {
    "instructions": "Read asr.text. Does the caller say they already tried the website, the app, or an earlier call?",
    "type": "noul",
  },
  "urgency": {
    "instructions": "Read asr.text. How urgent is the caller's need?",
    "levels": [
      {
        "description": "No time pressure mentioned",
        "label": "low",
      },
      {
        "description": "Wants it handled soon",
        "label": "normal",
      },
      {
        "description": "Says it is urgent, an emergency, or must happen today",
        "label": "high",
      },
    ],
    "type": "score",
  },
  "utteranceComplete": {
    "instructions": "Read asr.text. Has the caller finished their thought, rather than trailing off or being cut short?",
    "type": "noul",
  },
  "wantsHuman": {
    "instructions": "Read asr.text. Does the caller explicitly ask to talk to a person, an agent, a representative, or an operator?",
    "type": "noul",
  },
}
`;

exports[`question redesign > pins every question the model sees outside a form (a diff here re-keys the cassette) 1`] = `
{
  "addressedToSystem": {
    "criteria": {
      "false": "Talking to someone else in the room, to a television, or to themselves, even when what they say is about the call",
      "true": "Anything said in reply to the phone system, including a short answer or correction to the question it just asked, such as a name, a day, a number, a yes or no, or a bare correction",
    },
    "instructions": "Read asr.text. Is the caller speaking to the phone system, as opposed to someone else in the room, a television, or themselves?",
    "type": "noul",
  },
  "confusedByPrompt": {
    "instructions": "Read asr.text and node.promptJustPlayed. Does the caller sound confused by what the system just asked?",
    "type": "noul",
  },
  "containsMemberId": {
    "instructions": "Read asr.text. Does the caller state a member ID number, either as digits or as spoken number words?",
    "type": "noul",
  },
  "dateDay": {
    "criteria": {
      "1": null,
      "10": null,
      "11": null,
      "12": null,
      "13": null,
      "14": null,
      "15": null,
      "16": null,
      "17": null,
      "18": null,
      "19": null,
      "2": null,
      "20": null,
      "21": null,
      "22": null,
      "23": null,
      "24": null,
      "25": null,
      "26": null,
      "27": null,
      "28": null,
      "29": null,
      "3": null,
      "30": null,
      "31": null,
      "4": null,
      "5": null,
      "6": null,
      "7": null,
      "8": null,
      "9": null,
      "none": null,
    },
    "instructions": "Read asr.text. Which day of the month does the caller name, if any? The caller's date of birth or birthday, or a date answering a question about it, is not an appointment date. If the only month and day in asr.text belong to the caller's birthday, answer none. When they correct a day of the month, the word not marks the one they are rejecting; choose the other one, as in "not the 5th, the 6th" or "the 20th, not the 12th". A hedge such as "I'm not sure" or "either" is not a correction; name the day of the month they mention.",
    "type": "choice",
  },
  "dateMode": {
    "criteria": {
      "absolute": null,
      "none": "No day for the appointment. The caller's date of birth or birthday, or a date answering a question about it, is not one",
      "relative_day": null,
      "weekday": null,
      "window": null,
    },
    "instructions": "Read asr.text. How does the caller refer to a day for the appointment? "absolute" names a month or a month and day. "relative_day" is today, tomorrow, or the day after tomorrow. "weekday" names a day of the week. "window" is a span like this week or next month. "none" if no day is mentioned. The caller's date of birth or birthday, or a date answering a question about it, is not an appointment date. One utterance can carry both: a birthday and, separately, the day they want to come in. The appointment day is the one not introduced by born or birthday, so a weekday or a relative day said alongside a birthday is still the appointment day and still names the mode.",
    "type": "choice",
  },
  "dateMonth": {
    "criteria": {
      "april": null,
      "august": null,
      "december": null,
      "february": null,
      "january": null,
      "july": null,
      "june": null,
      "march": null,
      "may": null,
      "none": null,
      "november": null,
      "october": null,
      "september": null,
    },
    "instructions": "Read asr.text. Which month does the caller name, if any? The caller's date of birth or birthday, or a date answering a question about it, is not an appointment date. If the only month and day in asr.text belong to the caller's birthday, answer none. When they correct a month, the word not marks the month they are rejecting; choose the other one, as in "not March, April" or "October, not September". A hedge such as "I'm not sure" or "either" is not a correction; name the month they mention.",
    "type": "choice",
  },
  "dateRelativeDay": {
    "criteria": {
      "day_after_tomorrow": null,
      "none": null,
      "today": null,
      "tomorrow": null,
    },
    "instructions": "Read asr.text. Does the caller say today, tomorrow, or the day after tomorrow? When they correct a relative day, the word not marks the one they are rejecting; choose the other one, as in "not today, the day after tomorrow". A hedge such as "I'm not sure" or "either" is not a correction; name the relative day they mention.",
    "type": "choice",
  },
  "dateWeekday": {
    "criteria": {
      "friday": null,
      "monday": null,
      "none": null,
      "saturday": null,
      "sunday": null,
      "thursday": null,
      "tuesday": null,
      "wednesday": null,
    },
    "instructions": "Read asr.text. Which day of the week does the caller name, if any? When they correct a day, the word not marks the day they are rejecting; choose the other one, as in "not Monday, Friday" or "Saturday, not Sunday". A hedge such as "I'm not sure" or "either" is not a correction; name the day they mention.",
    "type": "choice",
  },
  "dateWeekdayQualifier": {
    "criteria": {
      "next": null,
      "none": null,
      "this": null,
    },
    "instructions": "Read asr.text. If the caller names a day of the week, do they say "this" or "next" before it? When they correct this qualifier, the word not marks the one they are rejecting; choose the other one, as in "not this Thursday, next Thursday". A hedge such as "I'm not sure" or "either" is not a correction; name the qualifier they mention.",
    "type": "choice",
  },
  "dateWindow": {
    "criteria": {
      "next_month": null,
      "next_week": null,
      "none": null,
      "this_month": null,
      "this_week": null,
    },
    "instructions": "Read asr.text. Does the caller name a span of days such as this week, next week, this month, or next month? When they correct the span, the word not marks the one they are rejecting; choose the other one, as in "not next week, this week". A hedge such as "I'm not sure" or "either" is not a correction; name the span they mention.",
    "type": "choice",
  },
  "dobDay": {
    "criteria": {
      "1": null,
      "10": null,
      "11": null,
      "12": null,
      "13": null,
      "14": null,
      "15": null,
      "16": null,
      "17": null,
      "18": null,
      "19": null,
      "2": null,
      "20": null,
      "21": null,
      "22": null,
      "23": null,
      "24": null,
      "25": null,
      "26": null,
      "27": null,
      "28": null,
      "29": null,
      "3": null,
      "30": null,
      "31": null,
      "4": null,
      "5": null,
      "6": null,
      "7": null,
      "8": null,
      "9": null,
      "none": null,
    },
    "instructions": "Read asr.text. Which day of the month is the caller's date of birth, if they say one? This is the birth date, not an appointment date.",
    "type": "choice",
  },
  "dobGiven": {
    "criteria": {
      "false": "No birth date. An appointment date, a date they want to be seen on, or someone else's birth date is not the caller's date of birth",
      "true": "The caller gives their own birth date or part of it: a full date, a month and day, or a year on its own in answer to a question about their birth year",
    },
    "instructions": "Read asr.text. Does the caller state their date of birth or birthday, in whole or in part (a month and day, or a year alone when asked for it)?",
    "type": "noul",
  },
  "dobMonth": {
    "criteria": {
      "april": null,
      "august": null,
      "december": null,
      "february": null,
      "january": null,
      "july": null,
      "june": null,
      "march": null,
      "may": null,
      "none": null,
      "november": null,
      "october": null,
      "september": null,
    },
    "instructions": "Read asr.text. Which month is the caller's date of birth in, if they say one? This is the birth date, not an appointment date. A month may be said as a number rather than a name; answer with the month that number means, as in seven two sixty five, which is July 2nd, 1965.",
    "type": "choice",
  },
  "dobYear": {
    "criteria": {
      "none": "No span of asr.text is a year of the caller's birth",
    },
    "instructions": "Read asr.text. Which of these spans is the year of the caller's birth, if they say one, as in "nineteen seventy four", "seventy four", or "two thousand one"? Choose none when no year is said.",
    "type": "choice",
  },
  "frustration": {
    "instructions": "Read asr.text. How frustrated does the caller sound?",
    "levels": [
      {
        "description": "Calm or neutral wording, including a plain request made once",
        "label": "none",
      },
      {
        "description": "A sigh, an ugh, a come on or a seriously attached to an otherwise plain request, or a complaint about waiting, with no sign the caller is repeating themselves",
        "label": "mild",
      },
      {
        "description": "The caller says they already said or told us something, counts the attempts as in for the third time, asks are you kidding me, calls it ridiculous, swears, insults the system, or threatens to hang up or complain",
        "label": "high",
      },
    ],
    "type": "score",
  },
  "intelligible": {
    "criteria": {
      "false": "Garbled fragments, transcribed noise, or nothing but a filler sound such as um or uh",
      "true": "Any real utterance, including a single word, a yes or no, a name, a number, or a string of digits",
    },
    "instructions": "Read asr.text. Is the text words the caller actually said, rather than garbled fragments or background noise?",
    "type": "noul",
  },
  "intent": {
    "criteria": {
      "agent": "Asks to speak with a person, representative, or operator",
      "billing": "Asks about a bill, charge, payment, or insurance coverage",
      "cancel": "Wants to cancel an existing appointment",
      "capabilities": "Asks what the system can do, what it is, what the options are, or how to use it, as in what can you do, what are my options, or what is this",
      "confirm_appointment": "Wants to check or confirm the details of an existing appointment",
      "none": "No request is expressed; the caller is only answering a question or saying something incidental",
      "other": "A request the clinic line does not handle",
      "repeat_prompt": "Asks the system to repeat what it just said",
      "reschedule": "Wants to move an existing appointment to a different day",
      "schedule_new": "Wants to book a new appointment that does not exist yet",
    },
    "instructions": "Read asr.text. What is the caller asking the clinic phone line to do? If they are only answering a slot or confirmation question and not asking for anything new, choose none.",
    "type": "choice",
  },
  "intentTentative": {
    "criteria": {
      "false": "The request is stated plainly, even if the caller hedges about a detail such as a date, a provider name, or a number",
      "true": "The hedge is about what the caller wants done, as in maybe cancel it or I guess I need to cancel",
    },
    "instructions": "Read asr.text. Does the caller express their request tentatively, with words such as maybe, I guess, I think, possibly, or might, rather than stating it plainly?",
    "type": "noul",
  },
  "languageSwitch": {
    "criteria": {
      "es": "Spanish",
      "fr": "French",
      "none": "English",
    },
    "instructions": "Read asr.text. Which language other than English does the caller ask for or speak, if any?",
    "type": "choice",
  },
  "memberIdComplete": {
    "instructions": "Read asr.text. If the caller states a member ID, do they finish saying the whole number rather than trailing off?",
    "type": "noul",
  },
  "memberIdSpan": {
    "criteria": {
      "none": "No span of asr.text is a member ID",
    },
    "instructions": "Read asr.text. Which of these spans is the member ID the caller states? Choose the span that covers the whole number as spoken, including number words like forty-four or three hundred fifty-five and modifiers like double or triple. Do not include words that are not part of the number. Choose none if no span is a member ID.",
    "type": "choice",
  },
  "nameGiven": {
    "criteria": {
      "false": "No personal name, or a name that is not the caller's, such as a doctor's name, or a correction to the doctor's name",
      "true": "The caller gives their own name, as in my name is Anna Petrov, this is Sam, or Priya Raghunathan, including a correction to their own name just read back to them, as in no, it's Sam Lee",
    },
    "instructions": "Read asr.text. Does the caller state their own name, first name alone or first and last?",
    "type": "noul",
  },
  "nameSpan": {
    "criteria": {
      "none": "No span of asr.text is the caller's name, as when the caller only agrees, refuses, or names something other than themselves",
    },
    "instructions": "Read asr.text. Which of these spans is the caller's own full name as they say it, first and last when both are given? Do not include words such as my name is or this is, and do not choose a provider's name or anyone else's. When \`slots.name\` is already set and the caller gives a different name for themselves, as in no, it's Sam Lee, choose that span; correcting the doctor's name, as in not Dr. Alder, Dr. Ames, is not the caller's name. A single word can be the whole name, as in Prince. Choose none if no span is the caller's name.",
    "type": "choice",
  },
  "provider": {
    "criteria": {
      "alvarez": "Dr. Alvarez, also said as just Alvarez",
      "chen": "Dr. Chen, also said as just Chen",
      "cheng": "Dr. Cheng, also said as just Cheng",
      "kim": "Dr. Kim, also said as just Kim",
      "nguyen": "Dr. Nguyen, also said as just Nguyen",
      "none": "No provider is named",
      "okafor": "Dr. Okafor, also said as just Okafor",
      "patel": "Dr. Patel, also said as just Patel",
      "rossi": "Dr. Rossi, also said as just Rossi",
    },
    "instructions": "Read asr.text. Which provider, if any, does the caller name? When they correct a name, the word not marks the name they are rejecting; choose the other one, as in "not Chen, Cheng" or "Okafor, not Nguyen". A hedge such as "I'm not sure" or "either" is not a correction; name the provider they mention.",
    "type": "choice",
  },
  "providerNameStatus": {
    "criteria": {
      "has_name": "Says yes, that they have or know the provider's name, without saying the name",
      "neither": "Names a provider, or says nothing about whether they know the name",
      "no_name": "Says no, or that they don't know, don't have, can't remember, or were never told the provider's name, or asks who the doctors are",
    },
    "instructions": "Read asr.text and node.promptJustPlayed. The caller was asked whether they have the provider's name. Do they say whether they know it, without naming a provider?",
    "type": "choice",
  },
  "providerUnsure": {
    "criteria": {
      "false": "The caller names a provider plainly, or names none. A caller correcting themselves, as in Dr. Chen, not Dr. Cheng, is sure, and so is a caller who hedges only about what they want done, as in maybe cancel it with Dr. Chen",
      "true": "The caller hedges about the provider, as in it might be Dr. Kim or Dr. Rossi I think, or offers two names for one provider, as in Dr. Chen or Cheng, I am not sure",
    },
    "instructions": "Read asr.text. Is the caller unsure which provider they mean, or unsure of that provider's name?",
    "type": "noul",
  },
  "rephrasingLastTurn": {
    "instructions": "Read asr.text and history. Is the caller repeating or rewording a request because the previous turn's outcome in history shows the system did not act on it?",
    "type": "noul",
  },
  "secondIntent": {
    "criteria": {
      "billing": "A second, separate request on top of the main one: Asks about a bill, charge, payment, or insurance coverage",
      "cancel": "A second, separate request on top of the main one: Wants to cancel an existing appointment",
      "confirm_appointment": "A second, separate request on top of the main one: Wants to check or confirm the details of an existing appointment",
      "none": "Everything the caller says belongs to one request, even if they describe it twice or add details to it; or they ask for nothing",
      "reschedule": "A second, separate request on top of the main one: Wants to move an existing appointment to a different day",
      "schedule_new": "A second, separate request on top of the main one: Wants to book a new appointment that does not exist yet",
    },
    "instructions": "Read asr.text. The caller states one main request. Does the same utterance also ask for a second, separate task on top of it, joined by words such as and also, as well, another thing, or while I have you? If so, which is the extra task? Choose none when everything they say is part of one request.",
    "type": "choice",
  },
  "spokeAMenuNumber": {
    "instructions": "Read asr.text. Does the caller say a single number as if choosing a menu option, such as "one" or "press two"?",
    "type": "noul",
  },
  "timeOfDay": {
    "criteria": {
      "afternoon": "Asks for the afternoon, late in the day, after work, end of day, or a time from two onward",
      "midday": "Asks for midday, noon, lunchtime, late morning, early afternoon, or a time between eleven and two",
      "morning": "Asks for the morning, first thing, early in the day, or a time before eleven",
      "none": "Says nothing about the part of the day",
    },
    "instructions": "Read asr.text. Does the caller say what part of the day they want the appointment in? Read only what they say about the time of day; a weekday or a date on its own says nothing about it, a greeting such as good morning or good afternoon says nothing about it, and earlier or later on their own, including later in the day, are not a part of the day; early next week or early this month is about the day, not the time of day.",
    "type": "choice",
  },
  "triedSelfService": {
    "instructions": "Read asr.text. Does the caller say they already tried the website, the app, or an earlier call?",
    "type": "noul",
  },
  "urgency": {
    "instructions": "Read asr.text. How urgent is the caller's need?",
    "levels": [
      {
        "description": "No time pressure mentioned",
        "label": "low",
      },
      {
        "description": "Wants it handled soon",
        "label": "normal",
      },
      {
        "description": "Says it is urgent, an emergency, or must happen today",
        "label": "high",
      },
    ],
    "type": "score",
  },
  "utteranceComplete": {
    "instructions": "Read asr.text. Has the caller finished their thought, rather than trailing off or being cut short?",
    "type": "noul",
  },
  "wantsHuman": {
    "instructions": "Read asr.text. Does the caller explicitly ask to talk to a person, an agent, a representative, or an operator?",
    "type": "noul",
  },
}
`;
